fix platformSelector flicker
closes 9881

--- a/src/components/platformSelector/style.module.scss
+++ b/src/components/platformSelector/style.module.scss
@@ -150,7 +150,6 @@
   align-items: start;
   gap: 0.25rem;
   text-align: left;
-  animation: var(--fade-in-animation) 0.1s ease-in;
 
   .platform-icon {
     translate: 0 4px;
